--- a/PhysicsPlayground.Display/MainWindow.xaml
+++ b/PhysicsPlayground.Display/MainWindow.xaml
@@ -16,7 +16,7 @@
             <Border BorderThickness="0 1 0 0" BorderBrush="Black">
                 <DockPanel DockPanel.Dock="Bottom">
                     <WrapPanel DockPanel.Dock="Left" VerticalAlignment="Center" HorizontalAlignment="Left">
-                        <ScrollBar Name="zoomBar" Orientation="Horizontal" Margin="10 0 0 0" MinWidth="200" Value="1" Minimum="0.1" Maximum="2" ValueChanged="Zoom_OnValueChanged"></ScrollBar>
+                        <ScrollBar Name="zoomBar" Orientation="Horizontal" Margin="10 0 0 0" MinWidth="200" Value="1" Minimum="0.1" Maximum="2"></ScrollBar>
                     </WrapPanel>
                     <WrapPanel DockPanel.Dock="Right" VerticalAlignment="Center" HorizontalAlignment="Right">
                         <Label Name="loadingLabel" Margin="0 0 10 0"></Label>
