--- a/PhysicsPlayground.Display/MainWindow.xaml
+++ b/PhysicsPlayground.Display/MainWindow.xaml
@@ -18,9 +18,13 @@
         </Canvas>
         <Border BorderThickness="0 1 0 0" BorderBrush="Black" Grid.Row="1">
             <DockPanel>
-                <WrapPanel DockPanel.Dock="Left" VerticalAlignment="Center" HorizontalAlignment="Left">
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Left" VerticalAlignment="Center" HorizontalAlignment="Left">
                     <ScrollBar Name="zoomBar" Orientation="Horizontal" Margin="10 0 0 0" MinWidth="200" Value="1" Minimum="0.1" Maximum="2"></ScrollBar>
-                </WrapPanel>
+                    <StackPanel Orientation="Horizontal" Margin="10 0 0 0">
+                        <Label>Speed: </Label>
+                        <TextBox Name="speedTextBox" KeyUp="SpeedTextBox_OnKeyUp" LostFocus="SpeedTextBox_OnLostFocus">1</TextBox>
+                    </StackPanel>
+                </StackPanel>
                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" VerticalAlignment="Center" HorizontalAlignment="Right">
                     <Label Name="loadingLabel" Margin="0 0 10 0"></Label>
                     <Label Name="timerLabel" Margin ="0 0 10 0"></Label>
