--- a/PhysicsPlayground.Display/MainWindow.xaml
+++ b/PhysicsPlayground.Display/MainWindow.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="0.9*"></RowDefinition>
             <RowDefinition Height="0.1*" ></RowDefinition>
         </Grid.RowDefinitions>
-        <Canvas Name="canvas" Grid.Row="0" Background="AliceBlue" ClipToBounds="True">
+        <Canvas Name="canvas" Grid.Row="0" Background="LightGray" ClipToBounds="True">
             <Canvas.RenderTransform>
                 <ScaleTransform x:Name="scaleTransform"></ScaleTransform>
             </Canvas.RenderTransform>
@@ -19,7 +19,7 @@
         <Border BorderThickness="0 1 0 0" BorderBrush="Black" Grid.Row="1">
             <DockPanel>
                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Left" VerticalAlignment="Center" HorizontalAlignment="Left">
-                    <ScrollBar Name="zoomBar" Orientation="Horizontal" Margin="10 0 0 0" MinWidth="200" Value="1" Minimum="0.1" Maximum="2"></ScrollBar>
+                    <ScrollBar Name="zoomBar" Orientation="Horizontal" Margin="10 0 0 0" MinWidth="200" Value="1" Minimum="0.1" Maximum="2" ValueChanged="ZoomBar_OnValueChanged"></ScrollBar>
                     <StackPanel Orientation="Horizontal" Margin="10 0 0 0">
                         <Label>Speed: </Label>
                         <TextBox Name="speedTextBox" KeyUp="SpeedTextBox_OnKeyUp" LostFocus="SpeedTextBox_OnLostFocus">1</TextBox>
